--- a/src/Makefile
+++ b/src/Makefile
@@ -1,25 +1,27 @@
-TARGET := Fixed_tb
-SRC := Fixed
+TARGET := RungeKutta_tb
+SRC := Fixed.nsl RungeKutta.nsl Function.nsl
+OBJV := $(SRC:%.nsl=%.v)
 NSLFLAGS := -verisim2
 
 .SUFFIXES: .nsh .nsl .v .vvp .vcd
 
-$(TARGET).v:$(TARGET).nsl
-	nsl2vl $(NSLFLAGS) -target $(TARGET) -o $@ $^
+$(TARGET).v:$(TARGET).nsl $(OBJV)
+	nsl2vl $(NSLFLAGS) -target $(TARGET) -o $@ $<
 
 .nsl.v:
 	nsl2vl -o $@ $^
 
-$(TARGET).vvp: $(TARGET).v $(SRC).v
+$(TARGET).vvp: $(TARGET).v $(OBJV)
 	iverilog -o $@ $^
 
 $(TARGET).vcd: $(TARGET).vvp
 	vvp $^
 
 .PHONY: run
-run: $(TARGET.vcd)
+run: $(TARGET).vcd
 wave: $(TARGET).vcd
 	gtkwave $^
 
 .PHONY: clean
-	rm *.v *.vcd *.vvp
+clean:
+	-rm *.v *.vcd *.vvp
